assistant dashboard, show google option on register, how works component, fix getTickets flow, form reset method on cruds, moment lib, mdi fonts

--- a/src/app/pages/admin/companies/companies.component.html
+++ b/src/app/pages/admin/companies/companies.component.html
@@ -1,8 +1,8 @@
-<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;">
+<div class="saturno-container animated fadeIn p-2">
 
     <div class="card bg-success lead text-white">
         <div class="card-header">Empresas</div>
-        <div class="card-body card-tickets-info table-responsive-sm">
+        <div class="card-body table-responsive-sm">
 
             <table class="table table-sm text-white">
                 <tr *ngFor="let company of companies">
