--- a/src/app/pages/assistant/desktop/desktop.component.html
+++ b/src/app/pages/assistant/desktop/desktop.component.html
@@ -1,4 +1,4 @@
-<div class="m-2 animated fadeIn" style="padding-bottom: 10em;">
+<div class="saturno-container shadow-box animated fadeIn" style="padding-bottom: 3em;">
 
   <div *ngIf="loading" class="mt-5 animated fadeIn">
     <mat-spinner></mat-spinner>
@@ -9,7 +9,7 @@
     <!-- DESKTOP -->
     <!-- ======================================================== -->
 
-    <div class="card bg-light mb-4" style="min-width: 18rem; max-width: 30rem;">
+    <div class="card bg-light mb-4">
       <div class="card-header banner-title">
         <span>
           ESCRITORIO {{ userService.desktop?.cd_desktop }}
@@ -80,8 +80,7 @@
     <!-- NO SKILLS -->
     <!-- ======================================================== -->
 
-    <div class="card bg-danger text-white p-3 mb-4" style="min-width: 18rem; max-width: 30rem;"
-      *ngIf="skillsAssistantThisCompany.length === 0">
+    <div class="saturno-container card bg-danger text-white p-3 mb-4" *ngIf="skillsAssistantThisCompany.length === 0">
       <p>
         Usted no tiene habilidades asignadas. Debe ir al administrador de asistentes, luego seleccionar el asistente 
         y allí asignarle skills / habilidades.
@@ -94,7 +93,7 @@
     <!-- SKILL TABLE -->
     <!-- ======================================================== -->
 
-    <div class="card bg-secondary mb-4" style="min-width: 18rem; max-width: 30rem;">
+    <div class="saturno-container card bg-secondary mb-4">
       <div class="card-content table-responsive-sm  p-2">
         <mat-radio-group [(ngModel)]="skillSelected">
 
