--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 html,
 body {
-    height: 100vh;
+    height          : 100vh;
+    background-color: whitesmoke;
 }
 
 body {
-   
+
     margin      : 0;
     font-family : Roboto, "Helvetica Neue", sans-serif;
     font-style  : normal;
@@ -15,6 +16,7 @@ body {
     src         : local('Pacifico Regular'), local('Pacifico-Regular'), url(https://fonts.gstatic.com/s/pacifico/v12/FwZY7-Qmy14u9lezJ-6H6MmBp0u-.woff2) format('woff2');
     font-display: swap;
 }
+
 
 button:focus {
     outline: none;
@@ -37,11 +39,79 @@ td {
     vertical-align: middle !important;
 }
 
+
+.saturno-typo {
+    font-family: monospace;
+    font-weight: 300;
+    font-size: x-large;
+    letter-spacing: .1em;
+    color: coral;
+}
 .shadow-box {
-    min-width    : 18rem;
-    max-width    : 30rem;
-    border-radius: 5px;
-    box-shadow   : 0px 0px 10px 0px #999;
+    border-radius   : 5px;
+    background-color: white;
+    box-shadow      : 0px 1px 3px 0px #999
+}
+
+
+.saturno-info-box {
+    cursor          : pointer;
+    margin          : .5em;
+    padding         : 1em;
+    background-color: white;
+}
+
+.saturno-info-title {
+    font-size  : large;
+    font-weight: 300;
+    color      : dimgrey;
+}
+
+.saturno-info-text {
+    font-size  : medium;
+    font-family: system-ui;
+    color      : dimgrey;
+}
+
+.saturno-hr-red {
+    border-top: 5px solid rgb(255 0 0 / 70%);
+    width     : 50%;
+}
+
+.saturno-hr-green {
+    border-top: 5px solid rgb(0 180 0 / 70%);
+    width     : 50%;
+}
+
+.saturno-hr-blue {
+    border-top: 5px solid rgb(0 0 180 / 70%);
+    width     : 50%;
+}
+
+.saturno-hr-grey {
+    border-top: 5px solid rgb(180 180 180 / 70%);
+    width     : 50%;
+}
+
+.footer {
+    position   : fixed;
+    bottom     : 0px;
+    width      : 100%;
+    align-items: center;
+}
+
+.footer-text {
+    text-align: center;
+    color: rgb(157 157 157);
+    font-weight: lighter;
+    font-family: monospace;
+    margin-left: .2em;
+}
+
+.footer-icon {
+    text-align: center;
+    opacity   : 0.4;
+    font-size: x-large;
 }
 
 .desktop-panel-buttons {
@@ -63,22 +133,35 @@ td {
 .saturno-container {
     min-width: 18rem;
     max-width: 30rem;
-    padding: 1em;
-    margin: 1em;
+    padding  : 1em;
+    margin   : .5em;
 }
+
+
+.saturno-container-mini {
+    min-width  : 4rem;
+    max-width  : 8.5rem;
+    align-items: center;
+}
+
+.saturno-container-mini-body {
+    font-size: xxx-large;
+    padding  : .1em;
+}
+
 .saturno-base {
     height: 8em;
 }
 
 .saturno-footer {
-    background-color: white;
-    padding-top: .3em;
-    padding-bottom: .3em;
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1030;
+    background-color     : white;
+    padding-top          : .3em;
+    padding-bottom       : .3em;
+    position             : fixed;
+    right                : 0;
+    bottom               : 0;
+    left                 : 0;
+    z-index              : 1030;
     /* unselectable */
     -webkit-touch-callout: none;
     -webkit-user-select  : none;
@@ -94,7 +177,7 @@ td {
     opacity  : 0.8;
     margin   : 0;
     outline  : none;
-    color    : #0d6ed6;
+    color    : #55585a;
 
 }
 
@@ -183,6 +266,7 @@ td {
     vertical-align: top;
 }
 
+
 .sidenav-title-text {
     color         : #449;
     font-size     : large;
@@ -191,7 +275,21 @@ td {
     font-weight   : 400;
 }
 
-
+.input-icon {
+    position: absolute;
+    top: -10px;
+    right: 1px;
+    font-size: 14px;
+    cursor: pointer;
+    width: 25px;
+    height: 23px;
+    /* border-radius: 11px; */
+    text-align: center;
+    padding: 3px;
+    color: #8d8d8d;
+    font-size: x-large;
+  
+  }
 
 /* sidenav items */
 .sidenav-item {
@@ -227,7 +325,6 @@ td {
     border-radius  : 0.3rem;
     text-align     : center;
     line-height    : normal;
-    font-size      : x-large;
     justify-content: center;
     margin         : .3rem;
 }
@@ -237,15 +334,34 @@ td {
     font-weight: 200;
 }
 
-.banner-content .xxxxl {
-    font-size: 3em;
+.xxxxl {
+    font-size  : 4em;
     font-weight: 500;
 }
 
-.banner-content .xxxl {
+.xxxl {
     font-size: xxx-large;
 }
 
+.xxl {
+    font-size: xx-large;
+}
+
+.xl {
+    font-size: x-large;
+}
+
+.lg {
+    font-size: large;
+}
+
+.md {
+    font-size: medium;
+}
+
+.sm {
+    font-size: small;
+}
 
 /* animate */
 /* animaciones */
@@ -290,6 +406,31 @@ td {
     border-color: #ffd740;
 }
 
+.icon-home-phone {
+    height         : 75px !important;
+    color          : red;
+    opacity        : .6;
+    font-size      : 4em;
+    display        : flex !important;
+    justify-content: center;
+}
+
+.icon-home-card {
+    opacity: .2;
+    font-size: 3em;
+}
+
+.mat-icon-center {
+    display        : flex !important;
+    justify-content: center;
+}
+
+.mat-icon-search-company {
+    width: 36px !important;
+    color: darkgray;
+    font-size: 2em;
+    opacity: .5;
+}
 
 .swal2-title {
     font-size  : x-large !important;
@@ -300,4 +441,9 @@ td {
 .swal2-content {
     font-size  : medium !important;
     font-weight: 300 !important;
+}
+
+
+.mat-horizontal-stepper-header-container {
+    display: none !important;
 }
