--- a/src/app/pages/admin/assistants/assistants.component.html
+++ b/src/app/pages/admin/assistants/assistants.component.html
@@ -1,8 +1,8 @@
-<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;">
+<div class="animated saturno-container fadeIn p-2">
 
     <div class="card bg-primary lead text-white">
         <div class="card-header">Asistentes</div>
-        <div class="card-body card-tickets-info table-responsive-sm">
+        <div class="card-body table-responsive-sm">
 
             <table class="table table-sm text-white" id="wt-form">
                 <tr *ngFor="let assistant of assistants">
@@ -20,7 +20,7 @@
                     </td>
                     <td style="text-align: right;">
                         <mat-icon class="ml-2 list-crud-edit" (click)="editAssistant(assistant)">edit</mat-icon>
-                        <mat-icon class="ml-2 list-crud-delete" (click)="deleteAssistant(assistant._id)">delete
+                        <mat-icon *ngIf="assistant._id !== userService.user._id" class="ml-2 list-crud-delete" (click)="deleteAssistant(assistant._id)">delete
                         </mat-icon>
                     </td>
                 </tr>
