--- a/src/app/pages/admin/desktops/desktops.component.html
+++ b/src/app/pages/admin/desktops/desktops.component.html
@@ -1,8 +1,8 @@
-<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;">
+<div class="saturno-container animated fadeIn p-2">
 
     <div class="card bg-info lead text-white">
         <div class="card-header">Escritorios</div>
-        <div class="card-body card-tickets-info table-responsive-sm">
+        <div class="card-body table-responsive-sm">
 
             <table class="table table-sm text-white">
                 <tr *ngFor="let desktop of desktops">
