--- a/src/app/pages/admin/skills/skills.component.html
+++ b/src/app/pages/admin/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;">
+<div class="saturno-container animated fadeIn p-2">
 
     <div class="card bg-danger lead text-white">
         <div class="card-header d-flex">
@@ -15,7 +15,7 @@
 
 
         </div>
-        <div *ngIf="activateSkills" class="card-body card-tickets-info table-responsive-sm">
+        <div *ngIf="activateSkills" class="card-body table-responsive-sm">
             <table class="table table-sm text-white">
                 <tr *ngFor="let skill of skills">
                     <td> {{skill?.cd_skill}} </td>
