--- a/src/app/pages/public/search/search.component.html
+++ b/src/app/pages/public/search/search.component.html
@@ -1,16 +1,26 @@
-<div class="shadow-box animated fadeIn m-4 p-3" style="min-width: 18rem; max-width: 30rem;">
+<div class="saturno-container shadow-box animated fadeIn">
 
-    <div *ngIf="!companySelected" class="jumbotron">
+    <div *ngIf="!companySelected" class="jumbotron text-dark">
+        
         <h2>Ingrese la empresa</h2>
+                <hr class="saturno-hr-grey">
+        
+        <mat-icon class="mat-icon-search-company">apartment</mat-icon>
+        <mat-icon class="mat-icon-search-company">house</mat-icon>
+        <mat-icon class="mat-icon-search-company">storefront</mat-icon>
+        <mat-icon class="mat-icon-search-company">deck</mat-icon>
+        <mat-icon class="mat-icon-search-company">location_city</mat-icon>
+        <mat-icon class="mat-icon-search-company">account_balance</mat-icon>
+        
+        <p class="lead">La empresa debe estar registrada, por ejemplo "Pizza Dots".</p>
 
-        <hr class="my-4">
         <div class="my-2">
 
             <mat-form-field color="warn" appearance="fill" logincss class="w-100">
-                <mat-label>Ingrese la empresa</mat-label>
+                <mat-label>Ingrese la empresa aquí</mat-label>
                 <input id="inputCompany" #inputCompany matInput [matAutocomplete]="auto" placeholder="Empresa S.A."
                     (keyup)="findCompany(inputCompany)" [value]="companySelected?.tx_company_name">
-                <span class="input-icon"><i class="mdi mdi-close"></i></span>
+                <span class="input-icon" (click)="cleanInput(inputCompany)"><i class="mdi mdi-close"></i></span>
             </mat-form-field>
 
             <mat-autocomplete (optionSelected)="setCompany($event.option.value)" #auto="matAutocomplete">
@@ -21,15 +31,15 @@
         </div>
     </div>
 
-    <div *ngIf="companySelected" class="jumbotron">
+    <div *ngIf="companySelected" class="animated fadeIn jumbotron">
         <p class="lead">
             Usted esta por ir hacia la recepción de turnos de
         </p>
-        <div class="card border-success py-4 my-4">
+        <div class="card py-4 my-4">
             <p class="text-company">
                 {{ companySelected.tx_company_name }}
             </p>
-            <p style="color: darkblue; font-size: 1rem; font-weight: 400;">
+            <p style="color: darkblue; font-size: 1rem; font-weight: 400;" class="my-0">
                 {{ companySelected.tx_address_street }}
                 {{ companySelected.tx_address_number }}
                 {{ companySelected.cd_city }}
